# bracex

./: .coveragerc  .gitignore  .pyspelling.yml  .travis.yml  404.html  CHANGES.md  LICENSE.md  MANIFEST.in  README.md  appveyor.yml  hatch_build.py  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml  tox.ini  zensical.yml
.github/: labels.yml
.github/workflows/: build.yml  deploy.yml  pullrequest.yml
_snippets/: links.txt
about/changelog/: index.html
about/contributing/: index.html
about/development/: index.html
about/license/: index.html
bracex/: __init__.py  __main__.py  __meta__.py
docs/src/dictionary/: en-custom.txt
docs/src/markdown/: index.md
docs/src/markdown/about/: changelog.md  contributing.md  development.md
search/: search_index.json
tests/: brace-cases.txt  brace-results.txt  generate.sh  test_brace.py  test_main.py  test_versions.py
tools/: gh_labels.py
