[build-system]
requires = [
    "hatchling>=0.21.1",
]
build-backend = "hatchling.build"

[project]
name = "bracex"
description = "Bash style brace expander."
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    { name = "Isaac Muse", email = "Isaac.Muse@gmail.com" },
]
keywords = [
    "bash",
    "brace",
    "expand"
]
dynamic = [
    "classifiers",
    "dependencies",
    "version",
]

[project.urls]
Homepage = "https://github.com/facelessuser/bracex"

[tool.hatch.version]
source = "code"
path = "bracex/__meta__.py"

[tool.hatch.build.targets.wheel]
include = [
    "/bracex",
]

[tool.hatch.build.targets.sdist]
include = [
    "/docs/src/markdown/**/*.md",
    "/docs/src/markdown/**/*.gif",
    "/docs/src/markdown/**/*.png",
    "/docs/src/markdown/dictionary/*.txt",
    "/docs/theme/**/*.css",
    "/docs/theme/**/*.js",
    "/docs/theme/**/*.html",
    "/requirements/*.txt",
    "/bracex/**/*.py",
    "/bracex/py.typed",
    "/tests/**/*.py",
    "/tests/**/*.txt",
    "/tests/**/*.sh",
    "/tools/**/*.py",
    "/.pyspelling.yml",
    "/.coveragerc",
    "/mkdocs.yml",
    "/tox.ini",
]

[tool.mypy]
files = [
    "bracex"
]
strict = true
show_error_codes = true

[tool.hatch.metadata.hooks.custom]
